# benevolentia-1

./: .gitignore  README.md  pyproject.toml
assets/unitree_h1/: h1_backup_torque_control.xml
checkpoints/2026-01-15/: dev_checkpoints_01152026_final.pkl
configs/: h1_walking.yaml
notes/: experiment-1.md  experiment-2.md
physics_ai/: __init__.py
physics_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
physics_ai/agents/: __init__.py  networks.py  ppo.py  rollout_buffer.py
physics_ai/envs/: __init__.py  brax_wrapper.py  domain_rand.py  h1_env.py  wrappers.py
physics_ai/rewards/: __init__.py  walking.py
physics_ai/utils/: __init__.py  jax_utils.py
scripts/: download_assets.py  evaluate.py  train.py  train_brax.py
